Fix: language and version dropdowns alignment

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -227,3 +227,7 @@ nav.foldable-nav {
     }
 }
 
+.dropdown-menu-right {
+    left: auto !important;
+}
+
